@@ -511,11 +511,12 @@ GroupObjCmd::~GroupObjCmd()
 void GroupObjCmd::execute()
 {
     KoRect r;
+    int position;
     QPtrListIterator<KPObject> it( m_objectsToGroup );
     for ( ; it.current() ; ++it )
     {
         it.current()->setSelected( false );
-        m_page->takeObject(it.current() );
+        position = m_page->takeObject(it.current() );
         it.current()->removeFromObjList();
         r |= it.current()->getBoundingRect();
     }
@@ -523,7 +524,7 @@ void GroupObjCmd::execute()
     m_groupObject->setUpdateObjects( false );
     m_groupObject->setOrig( r.x(), r.y() );
     m_groupObject->setSize( r.width(), r.height() );
-    m_page->appendObject( m_groupObject );
+    m_page->insertObject( m_groupObject, position );
     m_groupObject->addToObjList();
     m_groupObject->setUpdateObjects( true );
     m_groupObject->setSelected( true );
@@ -531,8 +532,8 @@ void GroupObjCmd::execute()
 
     m_doc->repaint( false );
 
-    // int pos = m_doc->pageList().findRef(m_page);
-    // m_doc->updateSideBarItem(pos, (m_page == m_doc->stickyPage()) ? true: false );
+    int pos = m_doc->pageList().findRef(m_page);
+    m_doc->updateSideBarItem(pos, (m_page == m_doc->stickyPage()) ? true: false );
 }
 
 void GroupObjCmd::unexecute()
@@ -553,82 +554,82 @@ void GroupObjCmd::unexecute()
 
     m_doc->repaint( false );
 
-    // int pos = m_doc->pageList().findRef(m_page);
-    // m_doc->updateSideBarItem(pos, (m_page == m_doc->stickyPage()) ? true: false );
+    int pos = m_doc->pageList().findRef(m_page);
+    m_doc->updateSideBarItem(pos, (m_page == m_doc->stickyPage()) ? true: false );
 }
 
 UnGroupObjCmd::UnGroupObjCmd( const QString &_name,
                               KPGroupObject *grpObj_,
                               KPresenterDoc *_doc, KPrPage *_page )
-    : KNamedCommand( _name ), objects( grpObj_->getObjects() )
+: KNamedCommand( _name )
+, m_groupedObjects( grpObj_->getObjects() )
+, m_doc( _doc )
+, m_page( _page )  
 {
-    objects.setAutoDelete( false );
-    doc = _doc;
-    m_page=_page;
-    QPtrListIterator<KPObject> it( objects );
+    QPtrListIterator<KPObject> it( m_groupedObjects );
     for ( ; it.current() ; ++it )
         it.current()->incCmdRef();
-    grpObj = grpObj_;
-    grpObj->incCmdRef();
+    m_groupObject = grpObj_;
+    m_groupObject->incCmdRef();
 }
 
 UnGroupObjCmd::~UnGroupObjCmd()
 {
-    QPtrListIterator<KPObject> it( objects );
+    QPtrListIterator<KPObject> it( m_groupedObjects );
     for ( ; it.current() ; ++it )
         it.current()->decCmdRef();
-    grpObj->decCmdRef();
+    m_groupObject->decCmdRef();
 }
 
 void UnGroupObjCmd::execute()
 {
-    grpObj->setUpdateObjects( false );
+    m_groupObject->setUpdateObjects( false );
 
-    m_page->takeObject(grpObj);
-    grpObj->removeFromObjList();
+    int position = m_page->takeObject( m_groupObject );
+    m_groupObject->removeFromObjList();
 
-    QPtrListIterator<KPObject> it( objects );
-    for ( ; it.current() ; ++it )
+    QPtrListIterator<KPObject> it( m_groupedObjects );
+    for ( it.toLast(); it.current() ; --it )
     {
-        m_page->appendObject( it.current() );
+        m_page->insertObject( it.current(), position );
         it.current()->addToObjList();
         it.current()->setSelected( true );
     }
 
-    doc->refreshGroupButton();
+    m_doc->refreshGroupButton();
 
-    doc->repaint( false );
+    m_doc->repaint( false );
 
-    int pos=doc->pageList().findRef(m_page);
-    doc->updateSideBarItem(pos, (m_page == doc->stickyPage()) ? true: false );
+    //int pos=m_doc->pageList().findRef(m_page);
+    //m_doc->updateSideBarItem(pos, (m_page == m_doc->stickyPage()) ? true: false );
 }
 
 void UnGroupObjCmd::unexecute()
 {
     KoRect r=KoRect();
-
-    QPtrListIterator<KPObject> it( objects );
+    int position = 0;
+    QPtrListIterator<KPObject> it( m_groupedObjects );
     for ( ; it.current() ; ++it )
     {
         it.current()->setSelected( false );
-        m_page->takeObject( it.current() );
+        position = m_page->takeObject( it.current() );
         it.current()->removeFromObjList();
         r |= it.current()->getBoundingRect();
     }
 
-    grpObj->setUpdateObjects( false );
-    grpObj->setOrig( r.x(), r.y() );
-    grpObj->setSize( r.width(), r.height() );
-    m_page->appendObject( grpObj );
-    grpObj->addToObjList();
-    grpObj->setUpdateObjects( true );
-    grpObj->setSelected( true );
-    doc->refreshGroupButton();
+    m_groupObject->setUpdateObjects( false );
+    m_groupObject->setOrig( r.x(), r.y() );
+    m_groupObject->setSize( r.width(), r.height() );
+    m_page->insertObject( m_groupObject, position );
+    m_groupObject->addToObjList();
+    m_groupObject->setUpdateObjects( true );
+    m_groupObject->setSelected( true );
+    m_doc->refreshGroupButton();
 
-    doc->repaint( false );
+    m_doc->repaint( false );
 
-    int pos=doc->pageList().findRef(m_page);
-    doc->updateSideBarItem(pos, (m_page == doc->stickyPage()) ? true: false );
+    //int pos=m_doc->pageList().findRef(m_page);
+    //m_doc->updateSideBarItem(pos, (m_page == m_doc->stickyPage()) ? true: false );
 }
 
 InsertCmd::InsertCmd( const QString &_name, KPObject *_object,
